fixes the linebreaks on the ReadMe file.

--- a/public/style.css
+++ b/public/style.css
@@ -150,3 +150,12 @@
     display: none;
   }
   
+  #readme-content {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    overflow-wrap: break-word;   /* Modern browsers */
+  }
+  
